Phase_3/TurtleC.output
Nonterminals useless in grammar

    arg_list


Terminals unused in grammar

    BACKSLASH
    UNDERSCORE
    EQUIVALENT
    NOT_EQUIVALENT
    PERIOD
    RETURN_TYPE_ARROW
    TRUE
    FALSE
    NOT
    OR
    AND
    QUOTE


Rules useless in grammar

   57 arg_list: arg_list COMMA numeric_expression
   58         | numeric_expression


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function functions
    3          | ε

    4 $@1: ε

    5 function: IDENTIFIER $@1 COLON L_BRACKET params R_BRACKET L_CURLY statements R_CURLY

    6 params: params COMMA IDENTIFIER
    7       | IDENTIFIER
    8       | ε

    9 statements: statement statements
   10           | ε

   11 statement: numeric_expression
   12          | read
   13          | write
   14          | break
   15          | assignment_statement
   16          | variable_assignment
   17          | variable_declaration
   18          | array_declaration
   19          | while_statement
   20          | return_statement
   21          | if_then_else_statement
   22          | single_comment

   23 break: TERMINATE SEMICOLON

   24 read: IDENTIFIER ASSIGNMENT READ L_PARENTHESIS IDENTIFIER R_PARENTHESIS

   25 write: WRITE L_PARENTHESIS IDENTIFIER COMMA IDENTIFIER R_PARENTHESIS

   26 add_operator: PLUS
   27             | MINUS

   28 mult_operator: DIVIDE
   29              | TIMES

   30 term: term mult_operator factor
   31     | factor

   32 factor: L_PARENTHESIS numeric_expression R_PARENTHESIS
   33       | NUM
   34       | IDENTIFIER

   35 numeric_expression: numeric_expression add_operator term
   36                   | term

   37 assignment_statement: variable_declaration SEMICOLON
   38                     | variable_assignment SEMICOLON

   39 variable_declaration: INTEGER_DATATYPE IDENTIFIER ASSIGNMENT numeric_expression
   40                     | INTEGER_DATATYPE IDENTIFIER SEMICOLON

   41 variable_assignment: IDENTIFIER ASSIGNMENT numeric_expression

   42 array_declaration: INTEGER_ARRAY_DATATYPE NUM IDENTIFIER SEMICOLON

   43 relational_expression: LESS_THAN
   44                      | GREATER_THAN
   45                      | LESS_THAN_EQUAL
   46                      | GREATER_THAN_EQUAL

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

   49 return_statement: RETURN IDENTIFIER SEMICOLON

   50 if_then_else_statement: if_statement
   51                       | if_statement else_statement
   52                       | if_statement elif_statement else_statement

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

   54 else_statement: ELSE L_CURLY statements R_CURLY

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

   56 single_comment: COMMENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BACKSLASH (258)
    RETURN (259) 49
    WHILE (260) 47 48
    VALID_CHAR (261)
    TERMINATE (262) 23
    UNDERSCORE (263)
    READ (264) 24
    WRITE (265) 25
    COLON (266) 5 47 48
    THIS (267) 47 48
    IF (268) 53
    ELIF (269) 55
    ELSE (270) 54
    COMMA (271) 6 25
    INTEGER_ARRAY_DATATYPE (272) 42
    EQUIVALENT (273)
    NOT_EQUIVALENT (274)
    SEMICOLON (275) 23 37 38 40 42 49
    PERIOD (276)
    RETURN_TYPE_ARROW (277)
    L_BRACKET (278) 5
    R_BRACKET (279) 5
    TRUE (280)
    FALSE (281)
    GREATER_THAN_EQUAL (282) 46
    LESS_THAN_EQUAL (283) 45
    GREATER_THAN (284) 44
    LESS_THAN (285) 43
    NOT (286)
    OR (287)
    AND (288)
    COMMENT (289) 56
    L_PARENTHESIS (290) 24 25 32 47 48 53 55
    R_PARENTHESIS (291) 24 25 32 47 48 53 55
    QUOTE (292)
    ASSIGNMENT (293) 24 39 41
    INTEGER_DATATYPE (294) 39 40
    L_CURLY (295) 5 47 48 53 54 55
    R_CURLY (296) 5 47 48 53 54 55
    NUM <strVal> (297) 33 42
    IDENTIFIER <strVal> (298) 5 6 7 24 25 34 39 40 41 42 47 48 49 53 55
    PLUS <strVal> (299) 26
    MINUS <strVal> (300) 27
    TIMES <strVal> (301) 29
    DIVIDE <strVal> (302) 28


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    functions (50)
        on left: 2 3
        on right: 1 2
    function (51)
        on left: 5
        on right: 2
    $@1 (52)
        on left: 4
        on right: 5
    params (53)
        on left: 6 7 8
        on right: 5 6
    statements (54)
        on left: 9 10
        on right: 5 9 47 48 53 54 55
    statement (55)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 9
    break (56)
        on left: 23
        on right: 14
    read (57)
        on left: 24
        on right: 12
    write (58)
        on left: 25
        on right: 13
    add_operator <operator> (59)
        on left: 26 27
        on right: 35
    mult_operator <operator> (60)
        on left: 28 29
        on right: 30
    term <nameAndCode> (61)
        on left: 30 31
        on right: 30 35 36
    factor <nameAndCode> (62)
        on left: 32 33 34
        on right: 30 31
    numeric_expression <nameAndCode> (63)
        on left: 35 36
        on right: 11 32 35 39 41
    assignment_statement (64)
        on left: 37 38
        on right: 15
    variable_declaration (65)
        on left: 39 40
        on right: 17 37
    variable_assignment (66)
        on left: 41
        on right: 16 38
    array_declaration (67)
        on left: 42
        on right: 18
    relational_expression (68)
        on left: 43 44 45 46
        on right: 47 53 55
    while_statement (69)
        on left: 47 48
        on right: 19
    return_statement (70)
        on left: 49
        on right: 20
    if_then_else_statement (71)
        on left: 50 51 52
        on right: 21
    if_statement (72)
        on left: 53
        on right: 50 51 52
    else_statement (73)
        on left: 54
        on right: 51 52
    elif_statement (74)
        on left: 55
        on right: 52
    single_comment (75)
        on left: 56
        on right: 22


State 0

    0 $accept: • program $end

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    5 function: IDENTIFIER • $@1 COLON L_BRACKET params R_BRACKET L_CURLY statements R_CURLY

    $default  reduce using rule 4 ($@1)

    $@1  go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: functions •

    $default  reduce using rule 1 (program)


State 4

    2 functions: function • functions

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (functions)

    functions  go to state 7
    function   go to state 4


State 5

    5 function: IDENTIFIER $@1 • COLON L_BRACKET params R_BRACKET L_CURLY statements R_CURLY

    COLON  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    2 functions: function functions •

    $default  reduce using rule 2 (functions)


State 8

    5 function: IDENTIFIER $@1 COLON • L_BRACKET params R_BRACKET L_CURLY statements R_CURLY

    L_BRACKET  shift, and go to state 9


State 9

    5 function: IDENTIFIER $@1 COLON L_BRACKET • params R_BRACKET L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (params)

    params  go to state 11


State 10

    7 params: IDENTIFIER •

    $default  reduce using rule 7 (params)


State 11

    5 function: IDENTIFIER $@1 COLON L_BRACKET params • R_BRACKET L_CURLY statements R_CURLY
    6 params: params • COMMA IDENTIFIER

    COMMA      shift, and go to state 12
    R_BRACKET  shift, and go to state 13


State 12

    6 params: params COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 14


State 13

    5 function: IDENTIFIER $@1 COLON L_BRACKET params R_BRACKET • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 15


State 14

    6 params: params COMMA IDENTIFIER •

    $default  reduce using rule 6 (params)


State 15

    5 function: IDENTIFIER $@1 COLON L_BRACKET params R_BRACKET L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 27
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 16

   49 return_statement: RETURN • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 44


State 17

   47 while_statement: WHILE • THIS COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE • THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    THIS  shift, and go to state 45


State 18

   23 break: TERMINATE • SEMICOLON

    SEMICOLON  shift, and go to state 46


State 19

   25 write: WRITE • L_PARENTHESIS IDENTIFIER COMMA IDENTIFIER R_PARENTHESIS

    L_PARENTHESIS  shift, and go to state 47


State 20

   53 if_statement: IF • L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    L_PARENTHESIS  shift, and go to state 48


State 21

   42 array_declaration: INTEGER_ARRAY_DATATYPE • NUM IDENTIFIER SEMICOLON

    NUM  shift, and go to state 49


State 22

   56 single_comment: COMMENT •

    $default  reduce using rule 56 (single_comment)


State 23

   32 factor: L_PARENTHESIS • numeric_expression R_PARENTHESIS

    L_PARENTHESIS  shift, and go to state 23
    NUM            shift, and go to state 25
    IDENTIFIER     shift, and go to state 50

    term                go to state 32
    factor              go to state 33
    numeric_expression  go to state 51


State 24

   39 variable_declaration: INTEGER_DATATYPE • IDENTIFIER ASSIGNMENT numeric_expression
   40                     | INTEGER_DATATYPE • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 52


State 25

   33 factor: NUM •

    $default  reduce using rule 33 (factor)


State 26

   24 read: IDENTIFIER • ASSIGNMENT READ L_PARENTHESIS IDENTIFIER R_PARENTHESIS
   34 factor: IDENTIFIER •
   41 variable_assignment: IDENTIFIER • ASSIGNMENT numeric_expression

    ASSIGNMENT  shift, and go to state 53

    $default  reduce using rule 34 (factor)


State 27

    5 function: IDENTIFIER $@1 COLON L_BRACKET params R_BRACKET L_CURLY statements • R_CURLY

    R_CURLY  shift, and go to state 54


State 28

    9 statements: statement • statements

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 55
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 29

   14 statement: break •

    $default  reduce using rule 14 (statement)


State 30

   12 statement: read •

    $default  reduce using rule 12 (statement)


State 31

   13 statement: write •

    $default  reduce using rule 13 (statement)


State 32

   30 term: term • mult_operator factor
   36 numeric_expression: term •

    TIMES   shift, and go to state 56
    DIVIDE  shift, and go to state 57

    $default  reduce using rule 36 (numeric_expression)

    mult_operator  go to state 58


State 33

   31 term: factor •

    $default  reduce using rule 31 (term)


State 34

   11 statement: numeric_expression •
   35 numeric_expression: numeric_expression • add_operator term

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60

    $default  reduce using rule 11 (statement)

    add_operator  go to state 61


State 35

   15 statement: assignment_statement •

    $default  reduce using rule 15 (statement)


State 36

   17 statement: variable_declaration •
   37 assignment_statement: variable_declaration • SEMICOLON

    SEMICOLON  shift, and go to state 62

    $default  reduce using rule 17 (statement)


State 37

   16 statement: variable_assignment •
   38 assignment_statement: variable_assignment • SEMICOLON

    SEMICOLON  shift, and go to state 63

    $default  reduce using rule 16 (statement)


State 38

   18 statement: array_declaration •

    $default  reduce using rule 18 (statement)


State 39

   19 statement: while_statement •

    $default  reduce using rule 19 (statement)


State 40

   20 statement: return_statement •

    $default  reduce using rule 20 (statement)


State 41

   21 statement: if_then_else_statement •

    $default  reduce using rule 21 (statement)


State 42

   50 if_then_else_statement: if_statement •
   51                       | if_statement • else_statement
   52                       | if_statement • elif_statement else_statement

    ELIF  shift, and go to state 64
    ELSE  shift, and go to state 65

    $default  reduce using rule 50 (if_then_else_statement)

    else_statement  go to state 66
    elif_statement  go to state 67


State 43

   22 statement: single_comment •

    $default  reduce using rule 22 (statement)


State 44

   49 return_statement: RETURN IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 68


State 45

   47 while_statement: WHILE THIS • COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE THIS • COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    COLON  shift, and go to state 69


State 46

   23 break: TERMINATE SEMICOLON •

    $default  reduce using rule 23 (break)


State 47

   25 write: WRITE L_PARENTHESIS • IDENTIFIER COMMA IDENTIFIER R_PARENTHESIS

    IDENTIFIER  shift, and go to state 70


State 48

   53 if_statement: IF L_PARENTHESIS • IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 71


State 49

   42 array_declaration: INTEGER_ARRAY_DATATYPE NUM • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 72


State 50

   34 factor: IDENTIFIER •

    $default  reduce using rule 34 (factor)


State 51

   32 factor: L_PARENTHESIS numeric_expression • R_PARENTHESIS
   35 numeric_expression: numeric_expression • add_operator term

    R_PARENTHESIS  shift, and go to state 73
    PLUS           shift, and go to state 59
    MINUS          shift, and go to state 60

    add_operator  go to state 61


State 52

   39 variable_declaration: INTEGER_DATATYPE IDENTIFIER • ASSIGNMENT numeric_expression
   40                     | INTEGER_DATATYPE IDENTIFIER • SEMICOLON

    SEMICOLON   shift, and go to state 74
    ASSIGNMENT  shift, and go to state 75


State 53

   24 read: IDENTIFIER ASSIGNMENT • READ L_PARENTHESIS IDENTIFIER R_PARENTHESIS
   41 variable_assignment: IDENTIFIER ASSIGNMENT • numeric_expression

    READ           shift, and go to state 76
    L_PARENTHESIS  shift, and go to state 23
    NUM            shift, and go to state 25
    IDENTIFIER     shift, and go to state 50

    term                go to state 32
    factor              go to state 33
    numeric_expression  go to state 77


State 54

    5 function: IDENTIFIER $@1 COLON L_BRACKET params R_BRACKET L_CURLY statements R_CURLY •

    $default  reduce using rule 5 (function)


State 55

    9 statements: statement statements •

    $default  reduce using rule 9 (statements)


State 56

   29 mult_operator: TIMES •

    $default  reduce using rule 29 (mult_operator)


State 57

   28 mult_operator: DIVIDE •

    $default  reduce using rule 28 (mult_operator)


State 58

   30 term: term mult_operator • factor

    L_PARENTHESIS  shift, and go to state 23
    NUM            shift, and go to state 25
    IDENTIFIER     shift, and go to state 50

    factor  go to state 78


State 59

   26 add_operator: PLUS •

    $default  reduce using rule 26 (add_operator)


State 60

   27 add_operator: MINUS •

    $default  reduce using rule 27 (add_operator)


State 61

   35 numeric_expression: numeric_expression add_operator • term

    L_PARENTHESIS  shift, and go to state 23
    NUM            shift, and go to state 25
    IDENTIFIER     shift, and go to state 50

    term    go to state 79
    factor  go to state 33


State 62

   37 assignment_statement: variable_declaration SEMICOLON •

    $default  reduce using rule 37 (assignment_statement)


State 63

   38 assignment_statement: variable_assignment SEMICOLON •

    $default  reduce using rule 38 (assignment_statement)


State 64

   55 elif_statement: ELIF • L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    L_PARENTHESIS  shift, and go to state 80


State 65

   54 else_statement: ELSE • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 81


State 66

   51 if_then_else_statement: if_statement else_statement •

    $default  reduce using rule 51 (if_then_else_statement)


State 67

   52 if_then_else_statement: if_statement elif_statement • else_statement

    ELSE  shift, and go to state 65

    else_statement  go to state 82


State 68

   49 return_statement: RETURN IDENTIFIER SEMICOLON •

    $default  reduce using rule 49 (return_statement)


State 69

   47 while_statement: WHILE THIS COLON • L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE THIS COLON • L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    L_PARENTHESIS  shift, and go to state 83


State 70

   25 write: WRITE L_PARENTHESIS IDENTIFIER • COMMA IDENTIFIER R_PARENTHESIS

    COMMA  shift, and go to state 84


State 71

   53 if_statement: IF L_PARENTHESIS IDENTIFIER • relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    GREATER_THAN_EQUAL  shift, and go to state 85
    LESS_THAN_EQUAL     shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88

    relational_expression  go to state 89


State 72

   42 array_declaration: INTEGER_ARRAY_DATATYPE NUM IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 73

   32 factor: L_PARENTHESIS numeric_expression R_PARENTHESIS •

    $default  reduce using rule 32 (factor)


State 74

   40 variable_declaration: INTEGER_DATATYPE IDENTIFIER SEMICOLON •

    $default  reduce using rule 40 (variable_declaration)


State 75

   39 variable_declaration: INTEGER_DATATYPE IDENTIFIER ASSIGNMENT • numeric_expression

    L_PARENTHESIS  shift, and go to state 23
    NUM            shift, and go to state 25
    IDENTIFIER     shift, and go to state 50

    term                go to state 32
    factor              go to state 33
    numeric_expression  go to state 91


State 76

   24 read: IDENTIFIER ASSIGNMENT READ • L_PARENTHESIS IDENTIFIER R_PARENTHESIS

    L_PARENTHESIS  shift, and go to state 92


State 77

   35 numeric_expression: numeric_expression • add_operator term
   41 variable_assignment: IDENTIFIER ASSIGNMENT numeric_expression •

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60

    $default  reduce using rule 41 (variable_assignment)

    add_operator  go to state 61


State 78

   30 term: term mult_operator factor •

    $default  reduce using rule 30 (term)


State 79

   30 term: term • mult_operator factor
   35 numeric_expression: numeric_expression add_operator term •

    TIMES   shift, and go to state 56
    DIVIDE  shift, and go to state 57

    $default  reduce using rule 35 (numeric_expression)

    mult_operator  go to state 58


State 80

   55 elif_statement: ELIF L_PARENTHESIS • IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 93


State 81

   54 else_statement: ELSE L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 94
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 82

   52 if_then_else_statement: if_statement elif_statement else_statement •

    $default  reduce using rule 52 (if_then_else_statement)


State 83

   47 while_statement: WHILE THIS COLON L_PARENTHESIS • IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE THIS COLON L_PARENTHESIS • IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 95


State 84

   25 write: WRITE L_PARENTHESIS IDENTIFIER COMMA • IDENTIFIER R_PARENTHESIS

    IDENTIFIER  shift, and go to state 96


State 85

   46 relational_expression: GREATER_THAN_EQUAL •

    $default  reduce using rule 46 (relational_expression)


State 86

   45 relational_expression: LESS_THAN_EQUAL •

    $default  reduce using rule 45 (relational_expression)


State 87

   44 relational_expression: GREATER_THAN •

    $default  reduce using rule 44 (relational_expression)


State 88

   43 relational_expression: LESS_THAN •

    $default  reduce using rule 43 (relational_expression)


State 89

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression • IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 97


State 90

   42 array_declaration: INTEGER_ARRAY_DATATYPE NUM IDENTIFIER SEMICOLON •

    $default  reduce using rule 42 (array_declaration)


State 91

   35 numeric_expression: numeric_expression • add_operator term
   39 variable_declaration: INTEGER_DATATYPE IDENTIFIER ASSIGNMENT numeric_expression •

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60

    $default  reduce using rule 39 (variable_declaration)

    add_operator  go to state 61


State 92

   24 read: IDENTIFIER ASSIGNMENT READ L_PARENTHESIS • IDENTIFIER R_PARENTHESIS

    IDENTIFIER  shift, and go to state 98


State 93

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER • relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    GREATER_THAN_EQUAL  shift, and go to state 85
    LESS_THAN_EQUAL     shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88

    relational_expression  go to state 99


State 94

   54 else_statement: ELSE L_CURLY statements • R_CURLY

    R_CURLY  shift, and go to state 100


State 95

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER • relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY
   48                | WHILE THIS COLON L_PARENTHESIS IDENTIFIER • R_PARENTHESIS L_CURLY statements R_CURLY

    GREATER_THAN_EQUAL  shift, and go to state 85
    LESS_THAN_EQUAL     shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88
    R_PARENTHESIS       shift, and go to state 101

    relational_expression  go to state 102


State 96

   25 write: WRITE L_PARENTHESIS IDENTIFIER COMMA IDENTIFIER • R_PARENTHESIS

    R_PARENTHESIS  shift, and go to state 103


State 97

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER • R_PARENTHESIS L_CURLY statements R_CURLY

    R_PARENTHESIS  shift, and go to state 104


State 98

   24 read: IDENTIFIER ASSIGNMENT READ L_PARENTHESIS IDENTIFIER • R_PARENTHESIS

    R_PARENTHESIS  shift, and go to state 105


State 99

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER relational_expression • IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 106


State 100

   54 else_statement: ELSE L_CURLY statements R_CURLY •

    $default  reduce using rule 54 (else_statement)


State 101

   48 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 107


State 102

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER relational_expression • IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY

    IDENTIFIER  shift, and go to state 108


State 103

   25 write: WRITE L_PARENTHESIS IDENTIFIER COMMA IDENTIFIER R_PARENTHESIS •

    $default  reduce using rule 25 (write)


State 104

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 109


State 105

   24 read: IDENTIFIER ASSIGNMENT READ L_PARENTHESIS IDENTIFIER R_PARENTHESIS •

    $default  reduce using rule 24 (read)


State 106

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER • R_PARENTHESIS L_CURLY statements R_CURLY

    R_PARENTHESIS  shift, and go to state 110


State 107

   48 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 111
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 108

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER • R_PARENTHESIS L_CURLY statements R_CURLY

    R_PARENTHESIS  shift, and go to state 112


State 109

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 113
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 110

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 114


State 111

   48 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements • R_CURLY

    R_CURLY  shift, and go to state 115


State 112

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS • L_CURLY statements R_CURLY

    L_CURLY  shift, and go to state 116


State 113

   53 if_statement: IF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY statements • R_CURLY

    R_CURLY  shift, and go to state 117


State 114

   55 elif_statement: ELIF L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)

    statements              go to state 118
    statement               go to state 28
    break                   go to state 29
    read                    go to state 30
    write                   go to state 31
    term                    go to state 32
    factor                  go to state 33
    numeric_expression      go to state 34
    assignment_statement    go to state 35
    variable_declaration    go to state 36
    variable_assignment     go to state 37
    array_declaration       go to state 38
    while_statement         go to state 39
    return_statement        go to state 40
    if_then_else_statement  go to state 41
    if_statement            go to state 42
    single_comment          go to state 43


State 115

   48 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER R_PARENTHESIS L_CURLY statements R_CURLY •

    $default  reduce using rule 48 (while_statement)


State 116

   47 while_statement: WHILE THIS COLON L_PARENTHESIS IDENTIFIER relational_expression IDENTIFIER R_PARENTHESIS L_CURLY • statements R_CURLY

    RETURN                  shift, and go to state 16
    WHILE                   shift, and go to state 17
    TERMINATE               shift, and go to state 18
    WRITE                   shift, and go to state 19
    IF                      shift, and go to state 20
    INTEGER_ARRAY_DATATYPE  shift, and go to state 21
    COMMENT                 shift, and go to state 22
    L_PARENTHESIS           shift, and go to state 23
    INTEGER_DATATYPE        shift, and go to state 24
    NUM                     shift, and go to state 25
    IDENTIFIER              shift, and go to state 26

    $default  reduce using rule 10 (statements)
